Correct some spelling mistakes

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -16,7 +16,7 @@ author_profile: true
 {% endfor %} -->
 
 <ul>
-  <li> <strong>[09/2020]</strong> "<emph>MorLog: Morphable Hardware Logging for Atomic Persistence in Non-Volatile Main Memory</emph>", oral presentation in 26th National Conference of Information Storage 2020. Shanghai, China. </li>
+  <li> <strong>[09/2020]</strong> "<emph>MorLog: Morphable Hardware Logging for Atomic Persistence in Non-Volatile Main Memory</emph>", oral presentation in 26th National Conference of Information Storage 2020 (NCIS). Shanghai, China. </li>
 
   <li> <strong>[08/2020]</strong> "<emph>CCHL: Compression-Consolidation Hardware Logging for Efficient Failure-Atomic Persistent Memory Updates</emph>", oral presentation in 49th International Conference on Parallel Processing (ICPP). Virtual event. </li>
 
